[project]
name = "goe"
version = "0.5.0-dev"
readme = "README.md"
requires-python = ">=3.7"
maintainers = [
  {name = "Neil Johnson", email = "neil@thirdchimp.net"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
dependencies = [
    # Core packages
    "pyarrow==11.0.0",
    "avro==1.11.1",
    "configparser==5.3.0",
    "cryptography==39.0.0",
    "filelock==3.9.0",
    "lark-parser==0.11.2",
    "numpy==1.24.1",
    "python-dateutil==2.8.2",
    "PyYAML==6.0",
    "requests==2.28.0",
    "requests-kerberos==0.14.0",
    "termcolor",
    "urllib3==1.26.14",

    # For Cloud storage
    "google-cloud-storage==2.7.0",
    "boto3==1.26.60",
    "azure-common==1.1.28",
    "azure-storage-blob==12.9.0",

    # For Oracle frontend
    "cx-Oracle==7.3.0",

    # For SQL Server frontend
    # If we do this for real we should switch to pyodbc
    "pymssql",

    # For BigQuery backend
    "google-cloud-bigquery==3.4.2",
    "google-cloud-kms==2.14.1",

    # For Synapse backend/Teradata frontend
    "pyodbc",

    # For Hadoop backend
    "hdfs==2.6.0",
    "impyla==0.17.0",
    "thrift-sasl==0.4.3",

    # For Snowflake backend
    "snowflake-connector-python==3.0.0",

    # GOE Listener packages
    "fastapi==0.77.0",
    "orjson==3.6.8",
    "uvicorn==0.17.6",
    "redis==4.3.1",
    "hiredis==2.0.0",
    "gunicorn==20.1.0",
    #git+ssh://git@bitbucket.org/gluent/gluentlib-contrib.git
    "brotli==1.0.9",
    "tenacity==8.0.1",
    "uvloop",
    "httptools",
]

[project.urls]
Homepage = "https://github.com/gluent/goe"
Issues = "https://github.com/gluent/goe/issues"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-xdist",
]
test = [
    "pytest",
    "pytest-xdist",
]

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

